--- a/gallery.html
+++ b/gallery.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Styles -->
+
     <style>
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #A1AEE2, #D5F6FB); /* Gradient Background */
+            background: linear-gradient(to right, #A1AEE2, #D5F6FB);
             color: #333;
             overflow-x: hidden;
             animation: fadeIn 2s forwards;
         }
 
         .navbar {
-            background: rgba(174, 198, 207, 0.8); /* Transparent Navbar */
+            background: rgba(174, 198, 207, 0.8);
             padding: 15px;
             position: sticky;
             top: 0;
@@ -114,7 +112,7 @@
         .frame:hover {
             transform: scale(1.05);
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
-            border: 5px solid rgb(0, 204, 255); /* RGB Border on hover */
+            border: 5px solid rgb(0, 204, 255); 
         }
 
         .frame img {
@@ -218,13 +216,13 @@
             <div class="section-title">Family Pictures</div>
             <div class="gallery-frame">
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\f1.jpg" alt="Family Picture 1">
+                    <img src="IMD318\f1.jpg" alt="Family Picture 1">
                 </div>
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\f2.jpg" alt="Family Picture 2">
+                    <img src="IMD318\f2.jpg" alt="Family Picture 2">
                 </div>
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\f3.jpg" alt="Family Picture 3">
+                    <img src="IMD318\f3.jpg" alt="Family Picture 3">
                 </div>
             </div>
         </div>
@@ -233,13 +231,13 @@
             <div class="section-title">Friends Pictures</div>
             <div class="gallery-frame">
                 <div class="frame">
-                    <img src="IMD318/e1.jpg" alt="Friends Picture 1">
+                    <img src="IMD318\e1.jpg" alt="Friends Picture 1">
                 </div>
                 <div class="frame">
-                    <img src="IMD318/e2.jpg" alt="Friends Picture 2">
+                    <img src="IMD318\e2.jpg" alt="Friends Picture 2">
                 </div>
                 <div class="frame">
-                    <img src="IMD318/e3.jpg" alt="Friends Picture 3">
+                    <img src="IMD318\e3.jpg" alt="Friends Picture 3">
                 </div>
             </div>
         </div>
@@ -248,13 +246,13 @@
             <div class="section-title">Uni Housemates</div>
             <div class="gallery-frame">
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\h1.jpg" alt="Uni Housemates 1">
+                    <img src="IMD318\h1.jpg" alt="Uni Housemates 1">
                 </div>
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\h2.jpg" alt="Uni Housemates 2">
+                    <img src="IMD318\h2.jpg" alt="Uni Housemates 2">
                 </div>
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\h3.jpg" alt="Uni Housemates 3">
+                    <img src="IMD318\h3.jpg" alt="Uni Housemates 3">
                 </div>
             </div>
         </div>
@@ -262,18 +260,14 @@
     </div>
 
     <audio id="backgroundMusic" controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
+        <source src="IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
     <div class="arrow-buttons">
         <!-- Back Arrow -->
         <a href="skills.html">
-            <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
-        </a>
-        <!-- Next Arrow -->
-        <a href="contact.html">
-            <i class="fas fa-arrow-right"></i> <!-- Right Arrow -->
+            <i class="fas fa-arrow-left"></i> 
         </a>
     </div>
 
