--- a/about.html
+++ b/about.html
@@ -191,12 +191,12 @@ I grew up and settled in Seri Manjung, Perak.
         </div>
 
         <div class="about-image">
-            <img src="C:IMD318\photo1.jpg" alt="About Me Image">
+            <img src="IMD318\photo1.jpg" alt="About Me Image">
         </div>
     </div>
 
     <div class="arrow-buttons">
-        <!-- Back Arrow -->
+
         <a href="index.html">
             <i class="fas fa-arrow-left"></i>
     </div>
