--- a/more.html
+++ b/more.html
@@ -6,6 +6,8 @@
     <title>More</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    
+    <style>
 
         body {
             font-family: 'Poppins', sans-serif;
